# appstream_parser

./: AppStreamParser.cpp  AppStreamParser.h  CMakeLists.txt  Component.cpp  Component.h  LICENSE  README.md  main.cpp
.github/workflows/: appstream_parser.yaml
cmake/: packaging.cmake
